--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "lib": ["es6"],
-    "sourceMap": true
+    "lib": ["es6", "dom"],
+    "sourceMap": false,
+    "rootDir": "src/",
+    "outDir": "app/"
   },
   "exclude": [
     "node_modules"
