--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "devDependencies": {
     "@types/node": "^8.0.14",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.11",
+    "express": "^4.17.1",
+    "ytdl-core": "^4.5.0",
+    "ytsr": "^3.3.1"
   }
 }
