--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
     "ytdl-core": "^4.5.0",
     "ytsr": "^3.3.1"
   }
