--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["es6", "dom"],
     "sourceMap": false,
     "rootDir": "src/",
-    "outDir": "app/"
+    "outDir": "dist/"
   },
   "exclude": [
     "node_modules"
