--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "start": "node app/app.js"
+    "start": "node dist/app.js",
+    "postinstall": "npm run-script build"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^8.0.14",
-    "typescript": "^3.2.2"
+    "typescript": "^3.9.10"
   },
   "dependencies": {
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
-    "ytdl-core": "^4.8.2",
-    "ytsr": "^3.5.0"
+    "ytdl-core": "^4.9.1",
+    "ytsr": "^3.5.3"
   },
   "repository": {
     "type": "git",
