Added logging service

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
-    "ytdl-core": "^4.9.1",
+    "jayh": "^1.0.9",
+    "ytdl-core": "^4.11.0",
     "ytsr": "^3.5.3"
   },
   "repository": {
